--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -2,7 +2,7 @@
     <wb-module deploy-name="JspProject">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/Day40"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/Day41_loginProject"/>
         <property name="context-root" value="JspProject"/>
         <property name="java-output-path" value="/JspProject/build/classes"/>
     </wb-module>
